--- a/_posts/2023-04-06-Stack456.markdown
+++ b/_posts/2023-04-06-Stack456.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Protostar Stack4, Stack5"
+title:  "Protostar Stack4, Stack5, Stack6"
 date:   2023-04-6 09:00:00 +1100
 categories: Journey
 tags: 
